Add basic message centre.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -1001,6 +1001,7 @@ hr {
 @import 'directives/cp-package-card.scss';
 @import 'directives/cp-review-card.scss';
 @import 'admin/general.scss';
+@import 'admin/sms-centre.scss';
 @import 'customer/account-details.scss';
 @import 'customer/order-leave-a-review.scss';
 @import 'customer/search.scss';
