SMS centre tests.

--- a/src/web/templates/admin/sms-centre.html
+++ b/src/web/templates/admin/sms-centre.html
@@ -31,7 +31,7 @@
             <button class="cp-sms-message-list-item"
                 ng-repeat="message in sentbox"
                 ng-click="viewMessage(message)"
-                >{{message.from}} : {{message.summary}}</button>
+                >{{message.to}} : {{message.summary}}</button>
         </div>
 
         <div ng-if="sentboxPage === 'view'" class="cp-sms-message-view">
