Add Angulartics button click tracking.

--- a/src/web/templates/auth/login-register.html
+++ b/src/web/templates/auth/login-register.html
@@ -19,7 +19,8 @@
                     </div>
 
                     <div class="cp-login-log-in col-xs-4">
-                        <input class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block" type="submit" value="Log in" />
+                        <input analytics-on="click" analytics-event="logIn" analytics-category="buttonEvents"
+                                class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block" type="submit" value="Log in" />
                     </div>
                 </div>
 
