--- a/src/web/templates/auth/register.html
+++ b/src/web/templates/auth/register.html
@@ -33,7 +33,8 @@
                     ng-model="plainPassword" />
             </div>
 
-            <input class="cp-btn cp-btn-primary cp-btn-sm" type="submit" value="Sign up" />
+            <input analytics-on="click" analytics-event="signUp" analytics-category="buttonEvents"
+                    class="cp-btn cp-btn-primary cp-btn-sm" type="submit" value="Sign up" />
         </fieldset>
     </form>
 </div>
