--- a/src/web/templates/customer/dashboard.html
+++ b/src/web/templates/customer/dashboard.html
@@ -70,7 +70,8 @@
                 </fieldset>
 
                 <div class="text-center">
-                    <input class="cp-btn cp-btn-primary cp-btn-lg" type="submit" value="Show me the food" />
+                    <input analytics-on="click" analytics-event="showFood" analytics-category="buttonEvents"
+                            class="cp-btn cp-btn-primary cp-btn-lg" type="submit" value="Show me the food" />
                 </div>
             </form>
         </div>
