--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -20,7 +20,8 @@
                             </div>
 
                             <div class="cp-login-log-in col-xs-4">
-                                <input class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block" type="submit" value="Log in" />
+                                <input analytics-on="click" analytics-event="logIn" analytics-category="buttonEvents"
+                                    class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block" type="submit" value="Log in" />
                             </div>
                         </div>
 
@@ -210,7 +211,9 @@
                     </div>
                 </fieldset>
 
-                <input class="cp-btn cp-btn-primary cp-btn-lg cp-btn-block" type="submit" value="Order now ({{ order.totalAmount | currency:'£':2 }})" />
+                <input analytics-on="click" analytics-event="orderNow" analytics-category="buttonEvents"
+                        class="cp-btn cp-btn-primary cp-btn-lg cp-btn-block" type="submit"
+                        value="Order now ({{ order.totalAmount | currency:'£':2 }})" />
 
                 <p ng-if="order.deliveryCost === 0" class="cp-package-delivery-cost">You’ve qualified for <span class="text-uppercase">free</span> delivery!</p>
 
