Make API and frontend base constants in YAML.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -81,6 +81,8 @@
         {% endif %}
 
         <script>
+            window.frontendBase = '{{ frontendBase }}';
+            window.apiBase = '{{ apiBase }}';
             window.hubspotBase = '{{ hubspotBase }}';
             window.googleMapsJavascriptApiV3Key = '{{ googleMapsJavascriptApiV3Key }}';
             window.cacheBusterValue = '{{ cacheBusterValue }}';
