Add database query page to admin pages.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -1008,6 +1008,7 @@ hr {
 @import 'directives/cp-review-meal-plan';
 @import 'admin/general.scss';
 @import 'admin/sms-centre.scss';
+@import 'admin/database-query.scss';
 @import 'customer/account-details.scss';
 @import 'customer/meal-plan-confirmation.scss';
 @import 'customer/meal-plan-success.scss';
