--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'partials/cp-checkout';
 @import 'partials/cp-vendor';
 @import 'partials/cp-meal-plan';
+@import 'partials/cp-meal-plan-setup';
 
 /**
  * Misc
