--- a/src/web/templates/customer/orders.html
+++ b/src/web/templates/customer/orders.html
@@ -83,8 +83,8 @@
                             </tr>
                             <tr>
                                 <th scope="row">Dietary requirements</th>
-                                <td class="order-details-cell" id="dietary_requirements">
-                                    {{ modalOrder.dietaryRequirements | dietaryRequirementsFormatter }}
+                                <td class="order-details-cell" id="dietary_requirements"
+                                    ng-bind-html="modalOrder.dietaryRequirements | dietaryRequirementsFormatter">
                                 </td>
                             </tr>
                             <tr>
