Generate MP destination & “Until end of the month”.

--- a/src/web/templates/admin/meal-plan-setup-meal-preferences.html
+++ b/src/web/templates/admin/meal-plan-setup-meal-preferences.html
@@ -48,6 +48,15 @@
                                        ng-model="preferences.duration" />
                                 1 month
                             </label>
+                            <label class="cp-radio-inline">
+                                <input name="duration"
+                                       type="radio"
+                                       value="3"
+                                       required
+                                       aria-required="true"
+                                       ng-model="preferences.duration" />
+                                Until end of the month
+                            </label>
                         </fieldset>
                     </div>
 
