Meal plan review.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'partials/cp-vendor';
 @import 'partials/cp-meal-plan';
 @import 'partials/cp-meal-plan-setup';
+@import 'partials/cp-meal-plan-review';
 
 /**
  * Misc
