--- a/src/web/templates/admin/meal-plan-setup-meal-preferences.html
+++ b/src/web/templates/admin/meal-plan-setup-meal-preferences.html
@@ -259,20 +259,22 @@
                     <div class="cp-form-group">
                         <label class="cp-form-label">What packages should and should not be included in the meal plan?</label>
                         <div class="cp-meal-plan-setup-package-disposition" ng-repeat="packageDisposition in preferences.packageDispositions">
-                            <span class="form-element-invalid" ng-show="mealPlanSetupForm.$submitted && mealPlanSetupForm.packageId{{ $index }}.$error.pattern">Package ID is invalid</span>
+                            <span class="form-element-invalid" ng-show="mealPlanSetupForm.$submitted && mealPlanSetupForm.packageHumanId{{ $index }}.$error.number">Package ID is invalid</span>
+                            <span class="form-element-invalid" ng-show="mealPlanSetupForm.$submitted && mealPlanSetupForm.packageDisposition{{ $index }}.$error.required">Select an option for the package</span>
                             <input class="cp-form-control cp-meal-plan-setup-package-disposition-package"
                                    id="package_disposition{{ $index }}_package"
-                                   name="packageId{{ $index }}"
-                                   type="text"
+                                   name="packageHumanId{{ $index }}"
+                                   type="number"
                                    placeholder="Package ID"
-                                   ng-model="packageDisposition.packageId"
-                                   ng-pattern="/[0-9a-f]{24}/" />
+                                   ng-model="packageDisposition.packageHumanId" />
 
                             <select class="cp-form-control cp-meal-plan-setup-package-disposition-disposition"
                                     id="package_disposition{{ $index }}_disposition"
+                                    name="packageDisposition{{ $index }}"
                                     ng-model="packageDisposition.disposition"
-                                    ng-options="disposition.value as disposition.label for disposition in packageDispositionOptions">
-                                <option value="">Select</option>
+                                    ng-options="disposition.value as disposition.label for disposition in packageDispositionOptions"
+                                    required>
+                                <option value="" selected disabled>Select</option>
                             </select>
                         </div>
 
