Add June to staff order stats page.

--- a/src/web/templates/admin/orders-stats.html
+++ b/src/web/templates/admin/orders-stats.html
@@ -5,15 +5,23 @@
 
     <p>Orders included can have any status (accepted or pending). Excludes deleted orders. Sales are grouped into UTC days.</p>
 
-    <h3 class="cp-heading">May</h3>
+    <div ng-if="isReady">
+        <h3 class="cp-heading">June</h3>
 
-    <p><b>Month total: {{ getTotalInMonth(may) }}</b></p>
+        <p><b>Month total: {{ getTotalInMonth(june) }}</b></p>
 
-    <p ng-repeat="day in may">{{ day.start | date:'d' }}: {{ day.sales }}</p>
+        <p ng-repeat="day in june">{{ day.start | date:'d' }}: {{ day.sales }}</p>
 
-    <h3 class="cp-heading">April</h3>
+        <h3 class="cp-heading">May</h3>
 
-    <p><b>Month total: {{ getTotalInMonth(april) }}</b></p>
+        <p><b>Month total: {{ getTotalInMonth(may) }}</b></p>
 
-    <p ng-repeat="day in april">{{ day.start | date:'d' }}: {{ day.sales }}</p>
+        <p ng-repeat="day in may">{{ day.start | date:'d' }}: {{ day.sales }}</p>
+
+        <h3 class="cp-heading">April</h3>
+
+        <p><b>Month total: {{ getTotalInMonth(april) }}</b></p>
+
+        <p ng-repeat="day in april">{{ day.start | date:'d' }}: {{ day.sales }}</p>
+    </div>
 </div>
