Add page to request meal plan generation.

--- a/src/web/templates/admin/meal-plan-setup-payment.html
+++ b/src/web/templates/admin/meal-plan-setup-payment.html
@@ -225,7 +225,7 @@
 
                 <hr />
 
-                <input class="cp-btn cp-btn-primary cp-btn-lg" type="submit" value="Generate meal plan" />
+                <input class="cp-btn cp-btn-primary cp-btn-lg" type="submit" value="Save" />
             </form>
         </div>
     </div>
