--- a/src/web/templates/admin/meal-plan-setup-delivery-details.html
+++ b/src/web/templates/admin/meal-plan-setup-delivery-details.html
@@ -7,55 +7,61 @@
         <div class="cp-meal-plan-setup-main">
             <h1 class="cp-heading">Delivery address</h1>
 
-            <div class="cp-form-group" ng-if="addresses.length > 0">
-                <label class="cp-form-label" for="saved_addresses">Saved location(s)</label>
+            <div class="cp-form-group" ng-if="existingAddresses.length > 0">
+                <label class="cp-form-label" for="existing_addresses">Saved location(s)</label>
                 <select class="cp-form-control"
-                        id="saved_addresses"
-                        ng-model="preferences.deliveryAddress"
-                        ng-options="address.id as address.label for address in addresses">
+                        id="existing_addresses"
+                        ng-model="$parent.chosenDeliveryAddressId"
+                        ng-options="existing.id as existing.label for existing in existingAddresses">
                     <option value="">Select</option>
                 </select>
             </div>
 
-            <hr ng-if="!preferences.deliveryAddress" />
+            <hr ng-if="!chosenDeliveryAddressId" />
 
-            <cp-checkout-address-form ng-if="!preferences.deliveryAddress" address="address"></cp-checkout-address-form>
+            <cp-checkout-address-form ng-if="!chosenDeliveryAddressId" address="newOrUpdatedAddress"></cp-checkout-address-form>
 
-            <div ng-if="preferences.deliveryAddress">
+            <div ng-if="chosenDeliveryAddressId">
                 <p>The vendor will deliver your packages to:</p>
 
-                <p class="cp-meal-plan-address" ng-bind-html="address | addressSingleLineFormatter:'<br />'"></p>
+                <p class="cp-meal-plan-address" ng-bind-html="newOrUpdatedAddress | addressSingleLineFormatter:'<br />'"></p>
 
                 <hr />
 
-                <form class="cp-form cp-meal-plan-setup-form" name="forms.mealPlanSetupForm" novalidate role="form">
+                <form class="cp-form cp-meal-plan-setup-form" name="mealPlanSetupForm" novalidate role="form">
                     <fieldset>
                         <div class="cp-form-group">
                             <label class="cp-form-label" for="office_manager_name">
                                 Contact name on arrival
-                                <span class="form-element-invalid" ng-show="forms.mealPlanSetupForm.$submitted && forms.mealPlanSetupForm.officeManagerName.$error.required">Contact name is required</span>
+                                <span class="form-element-invalid"
+                                    ng-show="mealPlanSetupForm.$submitted && mealPlanSetupForm.officeManagerName.$error.required"
+                                    >Contact name is required</span>
                             </label>
+
                             <input class="cp-form-control"
-                                   id="office_manager_name"
-                                   name="officeManagerName"
-                                   type="text"
-                                   required
-                                   aria-required="true"
-                                   ng-model="address.officeManagerName" />
+                                id="office_manager_name"
+                                name="officeManagerName"
+                                type="text"
+                                required
+                                aria-required="true"
+                                ng-model="newOrUpdatedAddress.officeManagerName" />
                         </div>
 
                         <div class="cp-form-group">
                             <label class="cp-form-label" for="landline_number">
                                 Phone/Mobile
-                                <span class="form-element-invalid" ng-show="forms.mealPlanSetupForm.$submitted && forms.mealPlanSetupForm.landlineNumber.$error.required">Phone/Mobile is required</span>
+                                <span class="form-element-invalid"
+                                    ng-show="mealPlanSetupForm.$submitted && mealPlanSetupForm.landlineNumber.$error.required"
+                                    >Phone/Mobile is required</span>
                             </label>
+
                             <input class="cp-form-control"
                                    id="landline_number"
                                    name="landlineNumber"
                                    type="tel"
                                    required
                                    aria-required="true"
-                                   ng-model="address.landlineNumber" />
+                                   ng-model="newOrUpdatedAddress.landlineNumber" />
                         </div>
 
                         <hr />
@@ -63,12 +69,15 @@
                         <fieldset class="cp-meal-plan-setup-delivery-instruction">
                             <legend class="cp-heading">Instructions for arrival</legend>
                             <div class="cp-form-group">
-                                <label class="cp-form-label" for="delivery_instruction">Do you have any instructions for the vendor’s arrival?</label>
+                                <label class="cp-form-label" for="delivery_instruction">
+                                    Do you have any instructions for the vendor’s arrival?
+                                </label>
+
                                 <textarea class="cp-form-control"
-                                          id="delivery_instruction"
-                                          name="deliveryInstruction"
-                                          rows="6"
-                                          ng-model="address.deliveryInstruction"></textarea>
+                                    id="delivery_instruction"
+                                    name="deliveryInstruction"
+                                    rows="6"
+                                    ng-model="newOrUpdatedAddress.deliveryInstruction"></textarea>
                             </div>
                         </fieldset>
 
@@ -77,10 +86,10 @@
                             <div class="cp-form-group">
                                 <label class="cp-form-label" for="parking_suggestion">Can you recommend anywhere to park nearby?</label>
                                 <textarea class="cp-form-control"
-                                          id="parking_suggestion"
-                                          name="parkingSuggestion"
-                                          rows="6"
-                                          ng-model="address.parkingSuggestion"></textarea>
+                                    id="parking_suggestion"
+                                    name="parkingSuggestion"
+                                    rows="6"
+                                    ng-model="newOrUpdatedAddress.parkingSuggestion"></textarea>
                             </div>
                         </fieldset>
 
