--- a/src/web/templates/admin/meal-plan-review.html
+++ b/src/web/templates/admin/meal-plan-review.html
@@ -9,59 +9,82 @@
             </ng-pluralize></span>
             <span class="total-amount">{{ mealPlan.totalCost | currency:'£':2 }}</span>
         </h1>
-        <p class="cp-meal-plan-review-delivery-address"><b>Delivery address</b>: {{ mealPlan.requirementsAtGeneration.deliveryAddress | addressSingleLineFormatter }}</p>
+
+        <p class="cp-meal-plan-review-delivery-address">
+            <b>Delivery address</b>:
+            {{ mealPlan.requirementsAtGeneration.deliveryAddress | addressSingleLineFormatter }}
+        </p>
     </div>
+
     <div class="cp-meal-plan-review">
         <div class="cp-meal-plan-review-main">
             <ul class="cp-meal-plan-review-orders" dnd-list="mealPlan.proposedOrders">
                 <li class="cp-meal-plan-review-order"
-                    ng-repeat="order in mealPlan.proposedOrders"
-                    dnd-draggable="order"
+                    ng-repeat="proposedOrder in mealPlan.proposedOrders"
+                    dnd-draggable="proposedOrder"
                     dnd-moved="$parent.moved($index)"
                     dnd-effect-allowed="move"
-                    dnd-selected="$parent.selected(order)"
-                    ng-class="{'selected': $parent.selectedOrder === order, 'unavailable': order.isAvailable === false}"
-                    >
+                    dnd-selected="$parent.selected(proposedOrder)"
+                    ng-class="{
+                        'selected': $parent.selectedProposedOrder === proposedOrder,
+                        'unavailable': proposedOrder.isAvailable === false
+                    }">
                     <div class="cp-meal-plan-review-order-date">
-                        <span class="cp-meal-plan-review-order-day">{{ order.requestedDeliveryDate | date:'EEE' }}</span>
-                        {{ order.requestedDeliveryDate | date:'dd/MM' }}
+                        <span class="cp-meal-plan-review-order-day">
+                            {{ proposedOrder.requestedDeliveryDate | date:'EEE' }}
+                        </span>
+
+                        {{ proposedOrder.requestedDeliveryDate | date:'dd/MM' }}
                     </div>
 
-                    <div class="cp-meal-plan-review-order-package-image" style="background-image: url('{{ order.package.images[0].medium }}')"></div>
+                    <div class="cp-meal-plan-review-order-package-image"
+                        style="background-image: url('{{ proposedOrder.package.images[0].medium }}')"></div>
 
                     <div class="cp-meal-plan-review-order-package-info">
-                        <span class="cp-meal-plan-review-order-package-name">{{ order.package.name }}</span>
-                        <span class="cp-meal-plan-review-order-vendor-name">{{ order.package.vendor.name }}</span>
-                        <span ng-if="order.availabilityErrorText" class="cp-meal-plan-review-order-availability-error">{{ order.availabilityErrorText }}</span>
+                        <span class="cp-meal-plan-review-order-package-name">{{ proposedOrder.package.name }}</span>
+                        <span class="cp-meal-plan-review-order-vendor-name">{{ proposedOrder.package.vendor.name }}</span>
+                        <span ng-if="proposedOrder.availabilityErrorText" class="cp-meal-plan-review-order-availability-error">
+                            {{ proposedOrder.availabilityErrorText }}
+                        </span>
                     </div>
                 </li>
             </ul>
 
-            <button class="cp-btn cp-btn-primary cp-btn-lg" ng-click="send()" ng-disabled="isSendToCustomerButtonDisabled">Send to customer</button>
+            <button class="cp-btn cp-btn-primary cp-btn-lg"
+                    ng-click="send()"
+                    ng-disabled="isSendToCustomerButtonDisabled">
+                Send to customer
+            </button>
         </div>
+
         <div class="cp-meal-plan-review-sidebar">
-            <aside class="cp-meal-plan-review-aside" ng-if="selectedOrder">
+            <aside class="cp-meal-plan-review-aside" ng-if="selectedProposedOrder">
                 <header>
                     <h2 class="sr-only">Your order</h2>
                     <span class="cp-meal-plan-review-aside-order-date">
-                        <b>{{ selectedOrder.requestedDeliveryDate | date:'EEE' }},</b>
-                        {{ selectedOrder.requestedDeliveryDate | date:'dd/MM/yy' }}
+                        <b>{{ selectedProposedOrder.requestedDeliveryDate | date:'EEE' }},</b>
+                        {{ selectedProposedOrder.requestedDeliveryDate | date:'dd/MM/yy' }}
                     </span>
                 </header>
 
-                <cp-package-card package="selectedOrder.package"></cp-package-card>
+                <cp-package-card package="selectedProposedOrder.package"></cp-package-card>
 
-                <cp-package-rating cp-summary="reviewsSummary" cp-style="horizontal" ng-if="reviewsSummary"></cp-package-rating>
+                <cp-package-rating cp-summary="reviewsSummary" cp-style="horizontal" ng-if="reviewsSummary"
+                    ></cp-package-rating>
 
-                <p class="cp-meal-plan-review-aside-package-description" js-clamp="'3'">{{ selectedOrder.package.description }}</p>
+                <p class="cp-meal-plan-review-aside-package-description" js-clamp="'3'">
+                    {{ selectedProposedOrder.package.description }}
+                </p>
 
-                <cp-order-details order="selectedOrder"></cp-order-details>
+                <cp-order-details order="selectedProposedOrder.realOrderFacade"></cp-order-details>
 
                 <a class="cp-btn cp-btn-default cp-btn-lg cp-btn-block"
-                    ng-href="/package/{{ selectedOrder.package.humanId }}-{{ selectedOrder.package.name | slugify }}"
+                    ng-href="/package/{{ selectedProposedOrder.package.humanId }}-{{ selectedProposedOrder.package.name | slugify }}"
                     >View details</a>
 
-                <button class="cp-btn cp-btn-link cp-btn-block cp-replace-package" ng-click="replace()">Replace with new package</button>
+                <button class="cp-btn cp-btn-link cp-btn-block cp-replace-package" ng-click="replace()">
+                    Replace with new package
+                </button>
             </aside>
         </div>
     </div>
