--- a/src/web/templates/admin/meal-plans.html
+++ b/src/web/templates/admin/meal-plans.html
@@ -1,6 +1,10 @@
 <div class="container">
     <h1 class="cp-heading">Meal plans for {{ customer.company ? customer.company : '(company name not set)' }}</h1>
 
+    <p ng-if="mealPlans.length === 0">
+        There are currently no meal plans for this customer.
+    </p>
+
     <ol>
         <li ng-repeat="mealPlan in mealPlans">
             ID: {{ mealPlan.id }}
