--- a/src/web/templates/general/customer-nav-menu-items.html
+++ b/src/web/templates/general/customer-nav-menu-items.html
@@ -1,4 +1,5 @@
 <li><a href="/customer/dashboard">Dashboard</a></li>
+<li ng-if="showMealPlansMenuItem"><a href="/customer/meal-plans">Meal plans</a></li>
 <li><a href="/vendors">Vendors</a></li>
 <li class="dropdown" dropdown>
     <a href="#" class="cp-button-my-account" dropdown-toggle role="button" aria-expanded="false">
