--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -1005,6 +1005,7 @@ hr {
 @import 'directives/cp-package-card.scss';
 @import 'directives/cp-review-card.scss';
 @import 'directives/cp-dietary-requirements-form';
+@import 'directives/cp-review-meal-plan';
 @import 'admin/general.scss';
 @import 'admin/sms-centre.scss';
 @import 'customer/account-details.scss';
