--- a/src/web/templates/directives/cp-order-details.html
+++ b/src/web/templates/directives/cp-order-details.html
@@ -22,7 +22,9 @@
         <dd class="cp-order-details-total">{{ order.totalAmountAfterVoucher | currency:'£' }}</dd>
     </dl>
 
-    <a class="cp-order-details-edit" ng-click="isEditOrderNoticeDisplayed = true">
+    <a class="cp-order-details-edit"
+            ng-if="isEditable"
+            ng-click="isEditOrderNoticeDisplayed = true">
         Edit<span class="sr-only"> order</span>
     </a>
 </section>
